# Ensembl2Symbol

./: .gitignore  Ensembl2Symbol.cabal  LICENSE  README.md  SRR2087327.human.heartReadsPerGene.out.annotated.tab
app/: Main.hs
data/: mart_export_rabbit_to_mousesymbol.shrink.txt  mart_export_rabbit_to_rabbitsymbol.shrink.txt  unique.v24.annotation.pairs.txt  unique.vM8.annotation.pairs.txt
src/: Gtf2Table.hs  Lib.hs  TranscriptTable.hs  moveColumns.py
