name:                Ensembl2Symbol
version:             0.1.0.0
synopsis:            Convert Gencode ensembl annotations to gene symbols
description:         Please see README.md
homepage:            http://github.com/githubuser/Ensembl2Symbol#readme
license:             BSD3
license-file:        LICENSE
author:              Min Zhang
maintainer:          mz1@bcm.edu
copyright:           2016 Min Zhang
category:            Data
build-type:          Simple
data-files:	     data/unique.v24.annotation.pairs.txt, data/unique.vM8.annotation.pairs.txt
-- extra-source-files:
cabal-version:       >=1.10

executable Ensembl2Symbol
  hs-source-dirs:      src
  main-is:             Lib.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -static
  build-depends:       base >= 4.7 && < 5, text>=1.2, unordered-containers>=0.2.5, safe >= 0.3, containers>=0.5
  default-language:    Haskell2010

executable gtf2Table
  hs-source-dirs:      src
  main-is:             Gtf2Table.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -static
  build-depends:       base
                       , text>=1.2, unordered-containers>=0.2.5, safe >= 0.3, containers>=0.5
  default-language:    Haskell2010

executable transcriptTable
  hs-source-dirs:      src
  main-is:             TranscriptTable.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -static
  build-depends:       base
                       , text>=1.2, unordered-containers>=0.2.5, safe >= 0.3, containers>=0.5
  default-language:    Haskell2010

--
--test-suite Ensembl2Symbol-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , Ensembl2Symbol
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Ensembl2Symbol
